--- a/frontend/src/assets/index.css
+++ b/frontend/src/assets/index.css
@@ -1,24 +1,35 @@
+@import url('https://fonts.googleapis.com/css?family=Muli:400,400i,700,700i');
 @media all and (min-width: 992px) {
-	.front-sidebar .sidebar li{ position: relative; }
-	.front-sidebar .sidebar li .submenu{ 
-		display: none;
-		position: absolute;
-		left:100%; top:-7px;
-		min-width: 240px;
-	}
-	.front-sidebar .sidebar li:hover > .submenu{ display: block; }
-}	
-@media (max-width: 991px) {
-	.front-sidebar .sidebar .submenu, .front-sidebar .sidebar .dropdown-menu{
-		position: static!important;
-		margin-left:0.7rem; margin-right:0.7rem; margin-bottom: .5rem;
-	}
-}	
-.top-navigation{
+    .front-sidebar .sidebar li {
+        position: relative;
+    }
 
+    .front-sidebar .sidebar li .submenu {
+        display: none;
+        position: absolute;
+        left: 100%;
+        top: -7px;
+        min-width: 240px;
+    }
+
+    .front-sidebar .sidebar li:hover>.submenu {
+        display: block;
+    }
 }
 
-.top-navigation .navbar{
+@media (max-width: 991px) {
+    .front-sidebar .sidebar .submenu,
+    .front-sidebar .sidebar .dropdown-menu {
+        position: static !important;
+        margin-left: 0.7rem;
+        margin-right: 0.7rem;
+        margin-bottom: .5rem;
+    }
+}
+
+.top-navigation {}
+
+.top-navigation .navbar {
     background-color: #e3e9ef !important;
 }
 
@@ -30,46 +41,398 @@
     color: #1c1e22 !important;
 }
 
-.header-navigation .navbar{
+.header-navigation .navbar {
     background-color: #ffdfd7 !important;
 }
 
 .header-navigation .navbar ul li a {
-    color: black !important;
+    color: #000000b8 !important;
 }
 
-.header-navigation .navbar form input{
+.header-navigation .navbar form input {
     width: 420px !important;
 }
 
-.header-navigation .navbar form button{
+.header-navigation .navbar form button {
     margin-left: -46px !important;
     padding: 3px 9px 5px 9px !important;
     background-color: #28a745 !important;
     color: #1c1e22 !important;
 }
+
 .front-sidebar .sidebar {
-    height: 498px !important;
+    height: 490px !important;
     overflow-x: initial !important;
     overflow-y: initial !important;
 }
 
-.single-item{
-    /* height: 370px; */
+
+body {
+    font-family: 'Muli', sans-serif;
+    background: #ddd;
 }
 
-.single-item .product-image{
-    /* height: 250px;
-    width: auto; */
-    align-items: center;
+.shell {
+    /* padding: 0px 0; */
+}
+
+.wsk-cp-product {
+    background: #fff;
+    padding: 15px;
+    border-radius: 6px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    position: relative;
+    margin: 20px auto;
+}
+
+.wsk-cp-img {
+    position: absolute;
+    top: 5px;
+    left: 50%;
+    transform: translate(-50%);
+    -webkit-transform: translate(-50%);
+    -ms-transform: translate(-50%);
+    -moz-transform: translate(-50%);
+    -o-transform: translate(-50%);
+    -khtml-transform: translate(-50%);
+    width: 100%;
+    padding: 15px;
+    transition: all 0.2s ease-in-out;
+}
+
+.wsk-cp-img img {
+    width: 100%;
+    transition: all 0.2s ease-in-out;
+    border-radius: 6px;
+}
+
+.wsk-cp-product:hover .wsk-cp-img {
+    top: -40px;
+}
+
+.wsk-cp-product:hover .wsk-cp-img img {
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+.wsk-cp-text {
+    padding-top: 124%;
+}
+
+.wsk-cp-text .category {
     text-align: center;
-    object-fit: contain;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 5px;
+    margin-bottom: 45px;
+    position: relative;
+    transition: all 0.2s ease-in-out;
+}
+
+.wsk-cp-text .category>* {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -khtml-transform: translate(-50%, -50%);
+
+}
+.main-btn-color{
+    background-color: #28a745 !important;
+    color: #000000b8;
+}
+
+.wsk-cp-text .category>span {
+    padding: 12px 30px;
+    border: 1px solid #313131;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+    border-radius: 27px;
+    transition: all 0.05s ease-in-out;
+
+}
+
+.wsk-cp-product:hover .wsk-cp-text .category>span {
+    border-color: #ddd;
+    box-shadow: none;
+    padding: 11px 28px;
+}
+
+.wsk-cp-product:hover .wsk-cp-text .category {
+    margin-top: 0px;
+}
+
+.wsk-cp-text .title-product {
+    text-align: center;
+}
+
+.wsk-cp-text .title-product h3 {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 15px auto;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%;
+}
+
+.wsk-cp-text .description-prod p {
+    margin: 0;
+}
+
+/* Truncate */
+.wsk-cp-text .description-prod {
+    text-align: center;
+    width: 100%;
+    height: 62px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    margin-bottom: 15px;
+}
+
+.card-footer {
+    padding: 25px 0 5px;
+    border-top: 1px solid #ddd;
+}
+
+.card-footer:after,
+.card-footer:before {
+    content: '';
+    display: table;
+}
+
+.card-footer:after {
+    clear: both;
+}
+
+.card-footer .wcf-left {
+    float: left;
+
+}
+
+.card-footer .wcf-right {
+    float: right;
+}
+
+.price {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+a.buy-btn {
+    display: block;
+    color: #212121;
+    text-align: center;
+    font-size: 18px;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    border-radius: 50%;
+    border: 1px solid #212121;
+    transition: all 0.2s ease-in-out;
+}
+
+a.buy-btn:hover,
+a.buy-btn:active,
+a.buy-btn:focus {
+    border-color: #FF9800;
+    background: #FF9800;
+    color: #fff;
+    text-decoration: none;
+}
+
+.wsk-btn {
+    display: inline-block;
+    color: #212121;
+    text-align: center;
+    font-size: 18px;
+    transition: all 0.2s ease-in-out;
+    border-color: #FF9800;
+    background: #FF9800;
+    padding: 12px 30px;
+    border-radius: 27px;
+    margin: 0 5px;
+}
+
+.wsk-btn:hover,
+.wsk-btn:focus,
+.wsk-btn:active {
+    text-decoration: none;
+    color: #fff;
+}
+
+.red {
+    color: #F44336;
+    font-size: 22px;
+    display: inline-block;
+    margin: 0 5px;
+}
+
+@media screen and (max-width: 991px) {
+    .wsk-cp-product {
+        margin: 40px auto;
+    }
+
+    .wsk-cp-product .wsk-cp-img {
+        top: -40px;
+    }
+
+    .wsk-cp-product .wsk-cp-img img {
+        box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+    }
+
+    .wsk-cp-product .wsk-cp-text .category>span {
+        border-color: #ddd;
+        box-shadow: none;
+        padding: 11px 28px;
+    }
+
+    .wsk-cp-product .wsk-cp-text .category {
+        margin-top: 0px;
+    }
+
+    a.buy-btn {
+        border-color: #FF9800;
+        background: #FF9800;
+        color: #fff;
+    }
+}
+
+.products .strike-font-size{
+    font-size: 22px !important;
 }
 
 
+/* Set the width and height of the slider container */
+.top-slider .slick-slider-container {
+    position: relative;
+    width: 80%; /* Set your desired width */
+    height: 300px; /* Set your desired height */
+    margin: auto;
+  }
 
-.single-item .product-image img{
-    height: 240px;
+  /* Style for the slides */
+  .top-slider .slick-slide {
+    text-align: center;
+    position: relative;
+  }
+
+  /* Ensure images within slides are properly scaled */
+  .top-slider .slick-slide img {
+    max-width: 100%; /* Ensure images don't exceed the width of the slide */
+    max-height: 100%; /* Ensure images don't exceed the height of the slide */
+  }
+
+  /* Style for the dots (navigation indicators) */
+  .top-slider .slick-dots {
+    position: absolute;
+    bottom: 125px !important; /* Adjust the distance from the bottom as needed */
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    list-style: none;
+    text-align: center;
+    padding: 0;
     width: auto;
-    align-self: center  ;
+  }
+
+  .top-slider .slick-dots li {
+    display: inline-block;
+    margin: 0 5px;
+  }
+
+  .top-slider .slick-dots li button {
+    font-size: 10px;
+    line-height: 10px;
+    display: block;
+    width: 10px;
+    height: 10px;
+    padding: 5px;
+    border: 0;
+    outline: none;
+    background-color: #bbb; /* Color of inactive dots */
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  .top-slider .slick-dots li.slick-active button {
+    background-color: #333; /* Color of active dot */
+  }
+
+
+
+
+
+  /* tag slider started */
+  
+/* Set the width and height of the slider container */
+.tag-slider .slick-slider-container {
+    position: relative;
+    width: 80%; /* Set your desired width */
+    height: 300px; /* Set your desired height */
+    margin: auto;
+  }
+
+  /* Style for the slides */
+  .tag-slider .slick-slide {
+    text-align: center;
+    position: relative;
+    margin: 0 2px 0 2px;
+    border: 0.5px solid #0000001c;
+  }
+
+  /* Ensure images within slides are properly scaled */
+  .tag-slider .slick-slide img {
+    max-width: 100%; /* Ensure images don't exceed the width of the slide */
+    max-height: 100%; /* Ensure images don't exceed the height of the slide */
+  }
+
+  /* Style for the dots (navigation indicators) */
+  .tag-slider .slick-dots {
+    position: absolute;
+    bottom: 125px !important; /* Adjust the distance from the bottom as needed */
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    list-style: none;
+    text-align: center;
+    padding: 0;
+    width: auto;
+  }
+
+  .tag-slider .slick-dots li {
+    display: inline-block;
+    margin: 0 5px;
+  }
+
+  .tag-slider .slick-dots li button {
+    font-size: 10px;
+    line-height: 10px;
+    display: block;
+    width: 10px;
+    height: 10px;
+    padding: 5px;
+    border: 0;
+    outline: none;
+    background-color: #bbb; /* Color of inactive dots */
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  .tag-slider .slick-dots li.slick-active button {
+    background-color: #333; /* Color of active dot */
+  }
+
+.tag-heading{
+    background-color: #c3b1b140;
+    line-height: 40px;
+    margin-top: 5px;
+}
+
+.tag-heading a{
+ color: #000000b8;
 }
